# nih_mpd_experiment

./: CMakeLists.txt  LICENSE  main.cpp  mpd_player.cpp  mpd_player.h  my_string_len.cpp  my_string_len.h  socket.cpp  socket.h
